src/test/ui/object-lifetime/object-lifetime-default-from-box-error.stderr
error[E0759]: `ss` has an anonymous lifetime `'_` but it needs to satisfy a `'static` lifetime requirement
  --> $DIR/object-lifetime-default-from-box-error.rs:18:5
   |
LL | fn load(ss: &mut SomeStruct) -> Box<dyn SomeTrait> {
   |             --------------- this data with an anonymous lifetime `'_`...
...
LL |     ss.r
   |     ^^^^ ...is used and required to live as long as `'static` here
   |
note: `'static` lifetime requirement introduced by the return type
  --> $DIR/object-lifetime-default-from-box-error.rs:14:37
   |
LL | fn load(ss: &mut SomeStruct) -> Box<dyn SomeTrait> {
   |                                     ^^^^^^^^^^^^^ `'static` requirement introduced here
...
LL |     ss.r
   |     ---- because of this returned expression
help: to declare that the trait object captures data from argument `ss`, you can add an explicit `'_` lifetime bound
   |
LL | fn load(ss: &mut SomeStruct) -> Box<dyn SomeTrait + '_> {
   |                                                   ++++

error[E0621]: explicit lifetime required in the type of `ss`
  --> $DIR/object-lifetime-default-from-box-error.rs:31:12
   |
LL | fn store1<'b>(ss: &mut SomeStruct, b: Box<dyn SomeTrait+'b>) {
   |                   --------------- help: add explicit lifetime `'b` to the type of `ss`: `&mut SomeStruct<'b>`
...
LL |     ss.r = b;
   |            ^ lifetime `'b` required

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0621, E0759.
For more information about an error, try `rustc --explain E0621`.
